<resources>
    <string name="app_id" translatable="false">com.tolgakurucay.mynotebook</string>
    <string name="app_name">My Notebook</string>
    <string name="signin">SIGN IN</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgotyourpassword">Forgot Your Password?</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="donthaveanaccount">Don\'t Have An Account?</string>
    <string name="register">Register</string>
    <string name="orsigninwith">Or Sign In With</string>
    <string name="signup">SIGN UP</string>
    <string name="signupnow">Sign Up Now</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="forgotpasswordlabel">FORGOT PASSWORD</string>
    <string name="sendcodetomail">Sent code to e-mail</string>
    <string name="enteranmail">Enter an e-mail</string>
    <string name="enteranpassword">Enter a password</string>
    <string name="enteranname">Enter a name</string>
    <string name="enteransurname">Enter a surname</string>
    <string name="invalidemail">Invalid e-mail</string>
    <string name="minimum8character">Minimum 8 character</string>
    <string name="blankfields">Please don\'t leave fields blank</string>
    <string name="emailnotverified">E-mail is not verified. Please check your mail. If you won\'t see your mail. Check your spams.</string>
    <string name="emailnotverifiedlabel">E-mail is not verified</string>
    <string name="okay">Okay</string>
    <string name="mailpasswordwronglabel">Mail and/or password wrong</string>
    <string name="createduserlabel">User created!</string>
    <string name="createduser">Created user successfully. Please confirm your mail to sign in</string>
    <string name="forgotpasswordtitle">Sent link to e-mail</string>
    <string name="forgotpassword">Click the link that came to your mail to reset email. May be in spams.</string>
    <string name="nousertitle">There is no user</string>
    <string name="nouser">There is no user with this e-mail</string>
    <string name="emailexistTitle">Email is already exist</string>
    <string name="emailexist">You have to use another e-mail to sign up</string>
    <string name="mailpasswordwrong">Or there is no user with this mail</string>
    <string name="enteranphone">Enter a phone number</string>
    <string name="sentcode">Send code</string>
    <string name="verify">Verify the code</string>
    <string name="codedidntsent">Code didn\'t sent? Try again</string>
    <string name="code6">Code must be 6 number of characters</string>
    <string name="codesent">Verification code has sent</string>
    <string name="invalidphonenumber">Invalid phone number</string>
    <string name="verificationsuccessful">Verification successful!</string>
    <string name="verificationfailed">Verification failed</string>
    <string name="phonenumber">Phone number</string>
    <string name="phonenumber10">Phone number must be 10 character of number</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="signout">Sign out</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="areyousureyouwanttoexit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loggedout">Logged out!</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enteratitle">Please enter a title</string>
    <string name="enteradescription">Please enter an description</string>
    <string name="selectanImage">Please select an image</string>
    <string name="save">Save</string>
    <string name="atleast3character">Enter at least 3 characters</string>
    <string name="loading">Loading</string>
    <string name="addtitleanddescription">At least be added a title and a description</string>
    <string name="addedNote">Note has successfully added to database</string>
    <string name="nonotes">No notes</string>
    <string name="error">Error!</string>
    <string name="savedchanges">Saved changes!</string>
    <string name="resetmypassword">Reset my password</string>
    <string name="changelanguage">Change language</string>
    <string name="upgradepackage">Buy rights</string>
    <string name="whoami">Who am I and contact me</string>
    <string name="mydescription">Hi! I\'m Tolga Kuruçay. I am creating many android applications why make easier life for people. You can contact me with app.mynotebook@gmail.com.</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="languageturkish">Language changed to Turkish</string>
    <string name="languageenglish">Language changed to English</string>
    <string name="password8">At least enter 8 characters</string>
    <string name="passwordsarentmatch">Passwords don\'t  Match</string>
    <string name="passwordchangedsuccesfully">Password changed successfully!</string>
    <string name="update">Update</string>
    <string name="updatedsuccessfully">Updated successfully</string>
    <string name="delete">Delete</string>
    <string name="deletedsuccessfully">Deleted successfully</string>
    <string name="deleteTitle">Delete?</string>
    <string name="youwantdelete">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="areyousureyouwanttoaddfavorites">Are you sure you want to add selected notes to favorites</string>
    <string name="addtofavorites">Add to favorites</string>
    <string name="date">Date</string>
    <string name="areyousureyouwanttosavechanges">Are you sure you want to save changes?</string>
    <string name="dontsave">Don\'t save</string>
    <string name="cancelled">Cancelled</string>
    <string name="thereisnofavorites">There is no favorite item</string>
    <string name="updatedcancelled">Update process has cancelled</string>
    <string name="sharedsuccessfully">Shared successfully</string>
    <string name="share">Share</string>
    <string name="title_activity_upgrade_package" translatable="false">UpgradePackageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="nextTab">Next</string>
    <string name="backTab">Back</string>
    <string name="buy">Buy</string>
    <string name="right">Right</string>
    <string name="changebackground">Change background</string>
    <string name="orderhistory">Order history</string>
    <string name="remaining">Remaining:</string>
    <string name="paymentsuccessful">Payment successful</string>
    <string name="price">Price</string>
    <string name="packagename">Package name</string>
    <string name="alarm">Alarm</string>
    <string name="savetocloud">Save to cloud</string>
    <string name="noteshassavedtofirebase">Notes has successfully saved to cloud server</string>
    <string name="youhavenoright">You have no right to save in cloud</string>
    <string name="cloud">Cloud</string>
    <string name="areyousureyouwanttocreatealarm">Are you sure you want to create alarm?</string>

    <string name="facebook_app_id" translatable="false">780850023107206</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb780850023107206</string>
    <string name="facebook_client_token" translatable="false">a3e36a1626a38302bb944010ecf3f235</string>
    <string name="registrationcancelled">Registration Has Cancelled</string>
    <string name="Registration">Registration</string>
    <string name="signinsuccessful">Sign In Sucessfull</string>
    <string name="noclouditemtoshow">No note in cloud to show</string>
    <string name="background">Background has updated</string>
    <string name="myfavorites">My Favorites</string>
    <string name="myprofile">My Profile</string>
    <string name="mycloud">My Cloud</string>
    <string name="mynotes">My Notes</string>
    <string name="mynote">My Note</string>
    <string name="addnote">Add Note</string>
    <string name="pickimage">Pick image</string>
    <string name="wheredoyouwantpickfrom">Where do you want pick from?</string>
    <string name="gallery">Gallery</string>
    <string name="internet">Internet</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="permissionneeded">Permission needed</string>
    <string name="givepermission">Give permission</string>
    <string name="deleteaccount">Delete account</string>
    <string name="areyousureyouwanttodeleteaccount">Are you sure you want to delete account?</string>
    <string name="accountdeleted">Account successfully deleted</string>
    <string name="enteraword">Enter any word to search</string>
    <string name="iagree">I Agree</string>
    <string name="linktoprivacypolicy">Link to privacy policy</string>
    <string name="content_desc_sign_in_background">Sign In Background</string>
    <string name="content_desc_google_sign_in">Google Sign In</string>
    <string name="content_desc_phone_sign_ın">Phone Sign In</string>
    <string name="content_desc_facebook_sign_in">Facebook Sign In\n</string>


</resources>