<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deleteItems"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/favoriteItems"
        android:title="@string/favorites"
        android:icon="@drawable/favorites"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/shareItem"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/alarmItem"
        android:icon="@drawable/alarm"
        android:title="@string/alarm"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/saveToFirebase"
        android:icon="@drawable/cloud_upload"
        android:title="@string/savetocloud"
        app:showAsAction="ifRoom"/>




</menu>