<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.login.SignUpFragment">
    <ImageView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:background="@drawable/time_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameSignUpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/surname"
            android:textColorHint="#000000"
            app:helperText="@string/enteransurname"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameSignUpLayout"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_baseline_person_add_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameSignUpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|left"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="@+id/nameSignUpLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameSignUpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:hint="@string/name"
            android:textColorHint="#000000"
            app:helperText="@string/enteranname"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameSignUpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSignUpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:textColorHint="#000000"
            app:helperText="@string/enteranmail"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameSignUpLayout"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignUpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordSignUpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:textColorHint="#000000"

            app:helperText="@string/enteranpassword"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignUpLayout"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:inputType="textPassword"
                android:password="true"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUpNow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:background="@android:drawable/screen_background_light_transparent"

            android:text="@string/signupnow"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUpLayout"
            app:layout_constraintWidth_percent="0.8" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>