<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/change_language_background"
    tools:context=".utils.ChangeLanguage">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTurkish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:text="@string/turkish"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/english"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/switchTurkish"
        app:layout_constraintStart_toStartOf="@+id/switchTurkish"
        app:layout_constraintTop_toBottomOf="@+id/switchTurkish" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/buttonshape_frame_white"
        android:text="@string/okay"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/switchEnglish"
        app:layout_constraintStart_toStartOf="@+id/switchEnglish"
        app:layout_constraintTop_toBottomOf="@+id/switchEnglish" />

</androidx.constraintlayout.widget.ConstraintLayout>