<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.forgotpassword.ForgotPasswordFragment">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:background="@drawable/background_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|left"
            android:text="@string/forgotpasswordlabel"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="@+id/emailForgotPasswordLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgotPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:textColorHint="#000000"
            app:helperText="@string/enteranmail"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
            app:layout_constraintWidth_percent="0.8"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgotPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sentCodeToMail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:background="@android:drawable/screen_background_light_transparent"

            android:text="@string/sendcodetomail"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailForgotPasswordLayout"
            app:layout_constraintWidth_percent="0.8" />

        <ProgressBar
            android:id="@+id/progressBarForgotPassword"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>